<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Saga Music</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_invite">Invite Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search">Search</string>

    <string name="type_song">Search for music</string>
    <string name="enter_song">Enter song name</string>
    <string name="error_connect">Error connecting to Internet</string>
    <string name="new_update">New update available!</string>
    <string name="update">Update</string>
    <string name="update_checking">Checking for update..</string>
    <string name="cancel">Cancel</string>
    <string name="no_update">No update found</string>
    <string name="update_now">Update now</string>

    <string name="placeholder_library">You haven\'t downloaded any song yet!</string>

    <string name="welcome">Welcome to Saga Music</string>
    <string name="welcome_text">Before we begin, here is some important legal information regarding your use of this app. This will only take a minute!</string>
    <string name="eula">Your use of this app is governed by:\n\na) Saga Terms of Service (http://sagaone.com/terms)\nb) Saga\'s Privacy Policy (http://sagaone.com/privacy)\n\nSaga\'s terms of service and privacy policies may be updated from time to time and without notice.</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>

    <string name="pref_storage_path">Storage Path</string>
    <string name="pref_search_results">Search Results</string>
    <string name="pref_search_results_summary_on">Show search results</string>
    <string name="pref_search_results_summary_off">Automatically download the best match</string>
    <string name="pref_TOS">Terms of Service</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="pref_app_version">App Version</string>
    <string name="pref_update">Check for Update</string>
    <string name="checkout">Tap to check out</string>
    <string name="pref_facebook">Facebook</string>
    <string name="follow_facebook">Follow us on Facebook</string>
    <string name="pref_google">Google+</string>
    <string name="follow_google">Join our community</string>
    <string name="pref_about">About Saga Music</string>
    <string name="made_with_love">Made with ♥ in India</string>

    <string name="hello_world">Hello world!</string>

</resources>
